--- a/src/app/shared/components/perfil-administracion/perfil-administracion.component.html
+++ b/src/app/shared/components/perfil-administracion/perfil-administracion.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div *ngIf="esAdmin" class="admin-menu">
   <div class="admin-header">
     <h1 class="admin-title">Administración de vehículos</h1>
@@ -12,7 +11,6 @@
   <!-- <div class="modal-backdrop" >
     <div class="modal-contenido" >
 
-=======
 <div class="admin-header">
   <h1 class="admin-title">Administración de vehículos</h1>
 
@@ -33,7 +31,7 @@
     </ul>
   </div>
 </div>
-<!-- (click)="ejecutar()" -->
+ (click)="ejecutar()" -->
 <div class="col-4">
   <button class="btn btn-success m-3"  (click)="rescatarTipoVheculos()">Cargar Tipos Vheiculos</button>
 </div>
@@ -127,9 +125,8 @@
         <span class="vehiculo-precio">{{ veh.precio }}</span>
         <span class="vehiculo-dia">por día</span>
       </div>
->>>>>>> Funcionalidad_crear_Vheiculo_Servir_enums
     </div>
-  </div> -->
+  </div>
 
   <div class="vehiculos-grid">
     <div class="vehiculo-card" *ngFor="let veh of vehiculos">
@@ -151,16 +148,11 @@
       </div>
       <button class="vehiculo-btn" >Editar</button>
     </div>
-<<<<<<< HEAD
-=======
     <button class="vehiculo-btn">Editar</button>
->>>>>>> Funcionalidad_crear_Vheiculo_Servir_enums
   </div>
 
   <app-editar-vehiculo *ngIf="showAgregarModal" (closeModal)="cerrarAgregarVehiculo()"></app-editar-vehiculo>
 </div>
-<<<<<<< HEAD
-=======
 <app-creart-tipo-vheiculo-admin
   *ngIf="showAgregarModalTipoVheiculo"
   (closeModal)="cerrarAgregarTipoVehiculo()"
@@ -169,4 +161,3 @@
   *ngIf="showAgregarModal"
   (closeModal)="cerrarAgregarVehiculo()"
 ></app-editar-vehiculo>
->>>>>>> Funcionalidad_crear_Vheiculo_Servir_enums
