--- a/src/app/shared/components/Header_Footer/navbar/navbar.component.html
+++ b/src/app/shared/components/Header_Footer/navbar/navbar.component.html
@@ -13,25 +13,25 @@
       <div class="center-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/#">
+            <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
               <div class="nav-icon"><i class="fas fa-car-side"></i></div>
               <span>Inicio</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/catalogo']">
+            <a class="nav-link" routerLink="/catalogo" routerLinkActive="active">
               <div class="nav-icon"><i class="fas fa-th-large"></i></div>
               <span>Catálogo</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/nosotros']">
+            <a class="nav-link" routerLink="/nosotros" routerLinkActive="active">
               <div class="nav-icon"><i class="fas fa-users"></i></div>
               <span>Nosotros</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/contacto']">
+            <a class="nav-link"routerLink="/contacto" routerLinkActive="active">
               <div class="nav-icon"><i class="fas fa-envelope"></i></div>
               <span>Contacto</span>
             </a>
