--- a/src/app/shared/components/Header_Footer/navbar/navbar.component.html
+++ b/src/app/shared/components/Header_Footer/navbar/navbar.component.html
@@ -73,7 +73,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link bg-danger text-white rounded px-2" style="background-color: red !important; color: white !important;" href="#" (click)="cerrarSesion(); $event.preventDefault()">
+            <a class="nav-link bg-danger text-white rounded px-2" style="background-color: red !important; color: white !important;" (click)="cerrarSesion()">
               <i class="fas fa-sign-out-alt me-1"></i>
               Cerrar sesión
             </a>
