--- a/src/app/shared/components/Header_Footer/navbar/navbar.component.html
+++ b/src/app/shared/components/Header_Footer/navbar/navbar.component.html
@@ -67,7 +67,7 @@
             </a>
           </li>
           <li class="nav-item" *ngIf="esAdmin">
-            <a class="nav-link bg-warning text-white rounded px-2" style="background-color: orange !important; color: white !important;" [routerLink]="['/perfil']">
+            <a class="nav-link bg-warning text-white rounded px-2" style="background-color: orange !important; color: white !important;" [routerLink]="['/admin']">
               <i class="fas fa-cogs me-1"></i>
               Panel Admin
             </a>
