--- a/src/app/shared/components/Catalogo/catalogo-component/catalogo-component.component.html
+++ b/src/app/shared/components/Catalogo/catalogo-component/catalogo-component.component.html
@@ -3,35 +3,35 @@
 
   <!-- Filtros principales - SOLO tipo de vehículo y ubicación -->
   <div class="filtros-principales">
-   <!-- Coche -->
-  <div class="filtro-tipo"
-       [ngClass]="{ 'activo': filtrosActivos.includes('tipo:COCHE') }"
-       (click)="toggleFiltro('tipo:COCHE')">
-    <img src="https://png.pngtree.com/png-clipart/20180613/ourmid/pngtree-fashion-car-private-car-orange-red-car-simulation-illustration-png-image_4484916.png"
-         alt="Coche"
-         class="icono-tipo">
-    <span>Coche</span>
-  </div>
+    <!-- Coche -->
+    <div class="filtro-tipo"
+         [ngClass]="{ 'activo': filtrosActivos.includes('tipo:COCHE') }"
+         (click)="toggleFiltro('tipo:COCHE')">
+      <img src="https://png.pngtree.com/png-clipart/20180613/ourmid/pngtree-fashion-car-private-car-orange-red-car-simulation-illustration-png-image_4484916.png"
+           alt="Coche"
+           class="icono-tipo">
+      <span>Coche</span>
+    </div>
 
-  <!-- Moto -->
-  <div class="filtro-tipo"
-       [ngClass]="{ 'activo': filtrosActivos.includes('tipo:MOTO') }"
-       (click)="toggleFiltro('tipo:MOTO')">
-    <img src="https://www.publicdomainpictures.net/pictures/500000/nahled/motorfiets-moto-suzuki-png.png"
-         alt="Moto"
-         class="icono-tipo">
-    <span>Moto</span>
-  </div>
+    <!-- Moto -->
+    <div class="filtro-tipo"
+         [ngClass]="{ 'activo': filtrosActivos.includes('tipo:MOTO') }"
+         (click)="toggleFiltro('tipo:MOTO')">
+      <img src="https://www.publicdomainpictures.net/pictures/500000/nahled/motorfiets-moto-suzuki-png.png"
+           alt="Moto"
+           class="icono-tipo">
+      <span>Moto</span>
+    </div>
 
-  <!-- Furgoneta -->
-  <div class="filtro-tipo"
-       [ngClass]="{ 'activo': filtrosActivos.includes('tipo:FURGONETA') }"
-       (click)="toggleFiltro('tipo:FURGONETA')">
-    <img src="https://png.pngtree.com/png-vector/20241105/ourmid/pngtree-3d-black-van-isolated-on-transparent-background-png-image_14270637.png"
-         alt="Furgoneta"
-         class="icono-tipo">
-    <span>Furgoneta</span>
-  </div>
+    <!-- Furgoneta -->
+    <div class="filtro-tipo"
+         [ngClass]="{ 'activo': filtrosActivos.includes('tipo:FURGONETA') }"
+         (click)="toggleFiltro('tipo:FURGONETA')">
+      <img src="https://png.pngtree.com/png-vector/20241105/ourmid/pngtree-3d-black-van-isolated-on-transparent-background-png-image_14270637.png"
+           alt="Furgoneta"
+           class="icono-tipo">
+      <span>Furgoneta</span>
+    </div>
 
     <!-- Filtro de ubicación -->
     <div class="filtro-ubicacion">
@@ -59,11 +59,11 @@
         <div class="especificacion-titulo">{{ getTituloEspecificacion(espec) }}</div>
         <div class="especificacion-opciones">
           <div *ngFor="let opcion of getOpcionesFiltro(espec)"
-             class="opcion-especificacion"
-             [ngClass]="{ 'activo': filtrosActivos.includes(espec + ':' + opcion) }"
-             (click)="seleccionarFiltro(espec, opcion)">
-          {{ opcion | titlecase }}
-        </div>
+               class="opcion-especificacion"
+               [ngClass]="{ 'activo': filtrosActivos.includes(espec + ':' + opcion) }"
+               (click)="seleccionarFiltro(espec, opcion)">
+            {{ opcion | titlecase }}
+          </div>
         </div>
       </div>
     </div>
@@ -93,6 +93,46 @@
 
   <!-- Grid de vehículos -->
   <div class="grid-vehiculos" *ngIf="!mostrarMensajeInicial && !mostrarMensajeSinResultados">
-    <!-- ... (mantener tu grid actual de vehículos) ... -->
+    <div class="tarjeta-vehiculo" *ngFor="let vehiculo of vehiculosFiltrados">
+      <div class="imagen-vehiculo">
+        <img [src]="vehiculo.imagen || 'assets/img/catalogo/default.png'"
+             [alt]="vehiculo.modelo"
+             (error)="vehiculo.imagen = 'assets/img/catalogo/default.png'">
+      </div>
+      <div class="info-vehiculo">
+        <div class="nombre-precio-vehiculo">
+          <div class="nombre-vehiculo">
+            <h3>{{ vehiculo.marca }}</h3>
+            <p>{{ vehiculo.modelo }}</p>
+            <p class="anio">{{ vehiculo.anio }}</p>
+          </div>
+          <div class="precio">
+            <span class="cantidad">€{{ vehiculo.precio }}</span>
+            <span class="por-dia">/día</span>
+          </div>
+        </div>
+        <div class="caracteristicas-vehiculo">
+          <div class="caracteristica">
+            <i [ngClass]="vehiculo.transmision === 'MANUAL' ? 'fas fa-gear' : 'fas fa-car-side'"></i>
+            <span>{{ vehiculo.transmision | titlecase }}</span>
+          </div>
+          <div class="caracteristica">
+            <i [ngClass]="{
+              'fas fa-gas-pump': vehiculo.combustible === 'GASOLINA' || vehiculo.combustible === 'GLP',
+              'fas fa-oil-can': vehiculo.combustible === 'DIESEL',
+              'fas fa-bolt': vehiculo.combustible === 'ELECTRICO'
+            }"></i>
+            <span>{{ vehiculo.combustible | titlecase }}</span>
+          </div>
+          <div class="caracteristica">
+            <i class="fas fa-wind"></i>
+            <span>{{ vehiculo.aireAcondicionado ? 'A/A' : 'Sin A/A' }}</span>
+          </div>
+        </div>
+        <button class="boton-detalles" (click)="verDetalles(vehiculo)">
+          <i class="fas fa-magnifying-glass"></i> Ver detalles
+        </button>
+      </div>
+    </div>
   </div>
 </div>
