--- a/src/app/shared/components/Perfil/perfil-administracion/perfil-administracion.component.html
+++ b/src/app/shared/components/Perfil/perfil-administracion/perfil-administracion.component.html
@@ -29,13 +29,13 @@
 
 </div>
 <div class="col-4">
-  <button class="btn btn-success m-3"  (click)="rescatarTipoVheculos()">Cargar Tipos Vheiculos</button>
+  <button class="btn btn-success m-3"  (click)="rescatarTipoVheculos()">Cargar Tipos Vehículos</button>
 </div>
 <div class="row pt-2 m-0">
   <div class="col-15">
     <div class="card">
       <div class="card-header bg-warning">
-        <h5>Lista tipo vheiculos</h5>
+        <h5>Lista tipo vehículos</h5>
       </div>
       <div class="card-body">
         <table class="table table-border">
