--- a/src/app/shared/components/Informacion/seccion-nosotros/seccion-nosotros.component.html
+++ b/src/app/shared/components/Informacion/seccion-nosotros/seccion-nosotros.component.html
@@ -40,7 +40,7 @@
                     <h2><b>MISIÓN</b></h2>
                     <p>
                       Ofrecer soluciones de movilidad flexibles y accesibles, poniendo a 
-                      disposición una flota moderna de autos, furgonetas y motos, con un servicio cercano y
+                      disposición una flota moderna de coches, motos y furgonetas, con un servicio cercano y
                       eficiente que facilite los desplazamientos de nuestros clientes y contribuya a sus experiencias de viaje.
                     </p>
                   </div>
