--- a/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
+++ b/src/app/shared/components/Contacto/contacto-banner/contacto-banner.component.html
@@ -17,7 +17,7 @@
         <div class="form-row">
           <div class="form-group">
             <div class="input-container">
-              <input type="text" id="nombre" class="form-input" required minlength="2" maxlength="30">
+              <input type="text" id="nombre" class="form-input" placeholder=" " required minlength="2" maxlength="30">
               <label for="nombre">Nombre</label>
               <span class="char-counter">0/20</span>
               <span class="error-message">Nombre inválido</span>
@@ -26,7 +26,7 @@
 
           <div class="form-group">
             <div class="input-container">
-              <input type="text" id="apellidos" class="form-input" required minlength="2" maxlength="50">
+              <input type="text" id="apellidos" class="form-input" placeholder=" " required minlength="2" maxlength="50">
               <label for="apellidos">Apellidos</label>
               <span class="char-counter">0/20</span>
               <span class="error-message">Apellidos inválidos</span>
@@ -37,7 +37,7 @@
         <div class="form-row">
           <div class="form-group">
             <div class="input-container">
-              <input type="email" id="email" class="form-input" required>
+              <input type="email" id="email" class="form-input" placeholder=" " required>
               <label for="email">Correo Electrónico</label>
               <span class="char-counter">0/15</span>
               <span class="error-message">Correo inválido</span>
@@ -46,7 +46,7 @@
 
           <div class="form-group">
             <div class="input-container">
-              <input type="tel" id="telefono" class="form-input" pattern="[0-9]{9}">
+              <input type="tel" id="telefono" class="form-input" placeholder=" " pattern="[0-9]{9}">
               <label for="telefono">Teléfono</label>
               <span class="char-counter">0/15</span>
               <span class="error-message">Teléfono inválido</span>
@@ -56,7 +56,7 @@
 
         <div class="form-group">
           <div class="input-container">
-            <textarea id="mensaje" class="form-input" rows="4" required></textarea>
+            <textarea id="mensaje" class="form-input" rows="4" required placeholder=" "></textarea>
             <label for="mensaje">Mensaje</label>
             <span class="error-message">Mensaje requerido</span>
           </div>
