--- a/src/app/shared/components/Home/hechos-home/hechos-home.component.css
+++ b/src/app/shared/components/Home/hechos-home/hechos-home.component.css
@@ -11,6 +11,7 @@
 .hechos-cifras .titulo {
   font-size: 3rem;
   font-weight: 700;
+  margin-bottom: 30px;
 }
 
 .hechos-cifras .descripcion {
@@ -84,10 +85,10 @@
 }
 
 .titulo-flota {
-  font-size: 3.5rem;
+  font-size: 50px;
   font-weight: 700;
   text-align: left;
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
 }
 
 .descripcion-flota {
@@ -125,6 +126,7 @@
   margin: 0 auto;
   font-size: 2.9rem;
   font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .descripcion {
