--- a/src/app/shared/components/Informacion/seccion-nosotros/seccion-nosotros.component.css
+++ b/src/app/shared/components/Informacion/seccion-nosotros/seccion-nosotros.component.css
@@ -11,11 +11,11 @@
 }
 
 .izquierda h2 {
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
   margin-bottom: 30px;
   color: #1f1f1f;
-  font-size: 50px;
+  line-height: 1;
 }
 
 .lista-puntos {
@@ -84,7 +84,7 @@
 .contenido h2 {
   font-size: 70px;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .contenido p {
