--- a/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
+++ b/src/app/shared/components/editar-vehiculo/editar-vehiculo.component.html
@@ -23,7 +23,7 @@
                 <select
                   class="form-select"
                   aria-label="id_tipo_vheiculo"
-                  formControlName="id"
+                  formControlName="tipoVehiculo"
                 >
                   @for (id_vh of tipoVehiculosList; track $index) {
                   <option [value]="id_vh.id">{{ id_vh.id }}</option>
