--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -74,15 +74,15 @@
       </div>
 
       <div class="boton-container">
-        <button class="btn-alquilar" (click)="mostrarFormularioAlquilar = true">Alquilar</button>
+        <button class="btn-alquilar" (click)="mostrarFormularioReserva()">Alquilar</button>
         <button *ngIf="esAdmin" class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
       </div>
       
       <app-formulario-alquilar 
         [tipoVehiculo]="tipoVehiculo" 
         [vehiculo]="vehiculo" 
-        *ngIf="mostrarFormularioAlquilar" 
-        (cerrarModal)="mostrarFormularioAlquilar = false">
+        *ngIf="showMostrarReserva" 
+        (cerrarModal)="showMostrarReserva = false">
       </app-formulario-alquilar>
     </div>
   </div>
