--- a/src/app/shared/components/Catalogo/preview-catalogo/preview-catalogo.component.css
+++ b/src/app/shared/components/Catalogo/preview-catalogo/preview-catalogo.component.css
@@ -5,11 +5,6 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-  background-color: #ffffff;
-  padding: 20px;
-}
-
 .contenedor {
   max-width: 1200px;
   margin: 0 auto;
@@ -171,4 +166,9 @@ h1 {
     align-items: flex-start;
     gap: 10px;
   }
+}
+
+.preview-catalogo-body {
+  background-color: #ffffff;
+  padding: 20px;
 }
