--- a/src/app/shared/components/Header_Footer/navbar/navbar.component.css
+++ b/src/app/shared/components/Header_Footer/navbar/navbar.component.css
@@ -7,7 +7,7 @@
   box-shadow: 0 3px 18px 0 rgba(108, 92, 231, 0.13);
   border-radius: 0 0 14px 14px;
   padding: 0.375rem 1.5rem;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
@@ -158,7 +158,7 @@
 
 /* Eliminar el padding-top del body ya que no es necesario por defecto */
 body {
-  padding-top: 0;
+  padding-top: 60px;
 }
 
 @media (max-width: 1100px) {
@@ -189,10 +189,6 @@ body {
   .nav-icon i,
   .ms-auto .nav-link i {
     font-size: 0.675rem;
-  }
-  
-  body {
-    padding-top: 0;
   }
 }
 
