--- a/src/app/shared/components/Panel_Admin/perfil-administracion/perfil-administracion.component.css
+++ b/src/app/shared/components/Panel_Admin/perfil-administracion/perfil-administracion.component.css
@@ -1,18 +1,39 @@
 .admin-container {
-  padding: 20px;
+  padding: 10px;
   max-width: 1200px;
   margin: 0 auto;
+  
 }
 
-.admin-header {
+.header-container {
+  position: relative;
+  background-color: #5937E0;
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px;
+  height: 50px;
+  color: var(--color-texto-claro);
+  padding: 6rem 0;
+  text-align: center;
+  overflow: hidden;
+}
+
+.admin-header h1 {
+  font-size: 4rem;
+  font-weight: 800;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  animation: fadeInDown 0.8s ease-out;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 .admin-actions {
   display: flex;
+  margin-top: 40px;
   gap: 15px;
 }
 
