--- a/src/app/shared/components/creart-tipo-vheiculo-admin/creart-tipo-vheiculo-admin.component.html
+++ b/src/app/shared/components/creart-tipo-vheiculo-admin/creart-tipo-vheiculo-admin.component.html
@@ -73,6 +73,16 @@
                     <span class="input-group-text">€/día</span>
                   </div>
                 </div>
+                <div class="mb-3">
+                  <label for="modelo" class="form-label">Imagen</label>
+                  <input
+                    type="text"
+                    id="modelo"
+                    name="modelo"
+                    class="form-control"
+                    formControlName="imagen"
+                  />
+                </div>
               </div>
 
               <div class="modal-footer">
