--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -10,7 +10,7 @@
         <li><strong>Puertas:</strong> {{ vehiculo.puertas || 'No disponible' }}</li>
         <li><strong>Aire Acondicionado:</strong> {{ vehiculo.aireAcondicionado ? 'Sí' : 'No' }}</li>
         <li><strong>Asientos:</strong> {{ vehiculo.plazas || 'No disponible' }}</li>
-        <li><strong>Distancia:</strong> {{ vehiculo.kilometraje || 'No disponible' }} km</li>
+        <li><strong>Kilometraje</strong> {{ vehiculo.kilometraje || 'No disponible' }} km</li>
         <li><strong>Color:</strong> {{ vehiculo.color || 'No disponible' }}</li>
         <li><strong>Ubicación:</strong> {{ vehiculo.ubicacion || 'No disponible' }}</li>
         <li><strong>Etiqueta:</strong> {{ vehiculo.etiqueta || 'No disponible' }}</li>
